--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1"
+    "react-scripts": "5.0.1"
   },
   "browserslist": {
     "production": [
@@ -37,4 +38,3 @@
   "author": "LernBase Nigeria",
   "license": "MIT"
 }
-
